[Chore #165661005] Setup ESLint to use AirBnB style guide

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Andela-Kigali  Developer Challenge Cycle 6 Bootcamp",
   "main": "app.js",
   "scripts": {
+    "lint": "eslint server/*.js  --fix",
     "start": "nodemon server/app.js --exec babel-node --",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
