--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,13 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 6,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "indent": [2, "tab"],
+    "comma-dangle": ["warn", "only-multiline"],
+    "no-console": "off",
+    "no-unused-vars": "off"
+  }
 }
