--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ language: node_js
 
 node_js:
   - node
-
+cache:
+  directories:
+    - 'node_modules'
 script:
   - npm run lint
   - npm run coveralls
