[Chore #165665529] Integrate  TravisCI for continuous integration

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Andela-Kigali Developer Challenge Cycle 6 Bootcamp",
   "main": "app.js",
   "scripts": {
-    "coverage": "nyc --reporter=html --reporter=text --cache npm test",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc --reporter=html --reporter=text npm test",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint server/*.js --fix",
     "start": "nodemon server/app.js --exec babel-node --",
     "test": "mocha --require babel-core/register server/test/**/*test.js --exit"
