[Chore #165734875] Integrate CodeClimate with TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
-
+env:
+  global:
+    - CC_TEST_REPORTER_ID=024300e222cf872bc641e47ac608f055e21fa74202be6e6cd6217452fabe0c9c
 language: node_js
 
 node_js:
@@ -9,3 +11,9 @@ cache:
     - 'node_modules'
 script:
   - npm run coveralls
+
+after_success:
+  - codeclimate < ./coverage/lcov.info
+
+notifications:
+  email: false
