--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,15 @@ node_js:
 cache:
   directories:
     - 'node_modules'
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - npm run coveralls
 
 after_success:
-  - codeclimate < ./coverage/lcov.info
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 notifications:
   email: false
