[Chore #165740658] Add continuous integration badges to ReadM.MD file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
-
+env:
+  global:
+    - CC_TEST_REPORTER_ID=024300e222cf872bc641e47ac608f055e21fa74202be6e6cd6217452fabe0c9c
 language: node_js
 
 node_js:
@@ -7,5 +9,15 @@ node_js:
 cache:
   directories:
     - 'node_modules'
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - npm run coveralls
+
+after_success:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+notifications:
+  email: false
