--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "comma-dangle": ["warn", "only-multiline"],
     "no-console": "off",
     "no-unused-vars": "off",
-    "no-tabs": "off"
+    "no-tabs": "off",
+    "prefer-arrow-callback": "off"
   }
 }
