--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,13 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-script:
-  - npm run coveralls
+script:0
+  - npm coverage
 
 after_success:
+  - npm run coveralls
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  
 
 notifications:
   email: false
