--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,12 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-script:0
-  - npm coverage
+script:
+  - npm run coverage
 
 after_success:
   - npm run coveralls
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-  
 
 notifications:
   email: false
