--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "coverage": "nyc --reporter=html --reporter=text npm test",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "lint": "eslint server/*.js --fix",
+    "lint": "node_modules/.bin/eslint ./server/*.js",
+	"lint-fix": "node_modules/.bin/eslint --fix ./server --ext .js --color",
     "start": "nodemon server/app.js --exec babel-node --",
     "test": "mocha --require babel-core/register server/test/**/*test.js --exit"
   },
@@ -25,7 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
