--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "node_modules/.bin/eslint ./server/*.js",
     "lint-fix": "node_modules/.bin/eslint --fix ./server --ext .js --color",
     "start": "npm run build && node ./build/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon server/app.js --exec babel-node --",
     "test": "mocha --require babel-core/register server/test/**/*test.js --exit"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "swagger-ui-express": "^4.0.2"
   },
@@ -55,6 +57,7 @@
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.11",
-    "nyc": "^14.0.0"
+    "nyc": "^14.0.0",
+    "supertest": "^4.0.2"
   }
 }
