--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Jkadhuwa/quick-credit#readme",
   "dependencies": {
+    "@hapi/joi": "^15.0.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
