[Chore #166030977] Increase code maintainability

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,5 @@
 exclude_patterns:
-  - '**/test**'
-  - '**/mock_db**'
-  - '**/node_modules**'
-  - "**/UI"
+  - '**/test'
+  - 'mock_db/'
+  - '**/node_modules'
+  - "**UI/"
