--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": ["env", "es2015"],
-  "env": {
-    "test": {
-      "plugins": ["istanbul"]
-    }
-  },
-  "plugins": ["transform-object-rest-spread"]
+  "presets": ["es2015"]
 }
