--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=8080
-NODE_ENV=test
 JWT_SECRET=addjsonwebtokensecretherelikeAndelaKigalicycle6
+DATABASE_URL = localhost://jkadhuwa:Joankadzo@127.0.0.1:5432/quick_credit
+DATABASE_TEST_URL = localhost://jkadhuwa:Joankadzo@127.0.0.1:5432/testdb
+TRAVIS_DB_URL(DATABASE_TEST_URL) = postgres://postgres@localhost/testdb
