[Feature #166103366] Create user signup endpoint

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 env:
   global:
+    -  PGPORT=5433
     - CC_TEST_REPORTER_ID=024300e222cf872bc641e47ac608f055e21fa74202be6e6cd6217452fabe0c9c
 language: node_js
 
@@ -10,6 +11,7 @@ cache:
   directories:
     - 'node_modules'
 before_script:
+  - psql -c 'create database testdb;' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
