--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
   directories:
     - 'node_modules'
 before_script:
+  - npm install
   - psql -c 'create database testdb;' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
