[Feature #166104085] Admin can view users

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 2018,
+	"parser": "babel-eslint",
     "sourceType": "module"
   },
   "rules": {
