--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "node_modules/.bin/eslint ./server/*.js --fix",
     "start": "npm run build && node ./build/app.js",
     "dev": "NODE_ENV=dev nodemon server/app.js --exec babel-node --exit",
-    "test": "NODE_ENV=test mocha --require babel-register server/test/user.test.js --exit"
+    "test": "NODE_ENV=test mocha --require babel-register server/test/**/*test.js --exit"
   },
   "repository": {
     "type": "git",
